apps/jellyfin/ingressroute.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: jellyfin
  namespace: jellyfin
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`jellyfin.lab.jackhumes.com`)
      kind: Rule
      services:
        - name: jellyfin
          port: 8096
  tls:
    secretName: jellyfin-tls
